--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  background-color: rgb(245, 245, 245);
+  background-color: #d8e7ec;
 }
-
 .container {
   margin: 80px auto 0;
   max-width: 1200px;
@@ -26,4 +25,8 @@ a {
 img[alt="logo"] {
   width: 200px;
   height: auto;
+}
+
+.reverse-column {
+  flex-direction: column-reverse !important;
 }
